--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -11,204 +11,72 @@
   }
 
 body {
-    background: beige;
+    background:#f2f2f2;
 }
-.tilesWrap {
-    padding: 0;
-    margin: 50px auto;
-    list-style: none;
-    text-align: center;
+
+
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 2em auto;
+  font-size: 1.2em;
 }
-.tilesWrap li {
-    display: inline-block;
-    width: 20%;
-    min-width: 200px;
-    max-width: 230px;
-    padding: 80px 20px 40px;
-    position: relative;
-    vertical-align: top;
-    margin: 10px;
-    font-family: 'helvetica', san-serif;
-    min-height: 25vh;
-    background: grey;
-    border: 1px solid #252727;
-    text-align: center;
+
+thead th {
+  background-color: #333;
+  color: white;
+  padding: 1em;
+  text-align: left;
 }
-.tilesWrap li h2 {
-    font-size: 114px;
-    margin: 0;
-    position: absolute;
-    opacity: 0.2;
-    top: 50px;
-    right: 10px;
-    transition: all 0.3s ease-in-out;
+
+tbody td {
+  padding: 1em;
+  border-bottom: 1px solid #333;
 }
-.tilesWrap li h3 {
-    font-size: 20px;
-    color: #b7b7b7;
-    margin-bottom: 5px;
+
+tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
-.tilesWrap li p {
-    font-size: 16px;
-    line-height: 18px;
-    color: #b7b7b7;
-    margin-top: 5px;
+
+tbody tr:hover {
+  background-color: #ddd;
+  cursor: pointer;
 }
-.tilesWrap li button {
-    background: transparent;
-    border: 1px solid #b7b7b7;
+
+#create-product-link, #home-product-link {
+  display: block;
+  margin: 2em auto;
+  text-align: right;
+  font-size: 1.2em;
+}
+
+#create-product-link a, #home-product-link a {
+  color: blue;
+    font-size: 14px;
     padding: 10px 20px;
-    color: #b7b7b7;
-    border-radius: 3px;
-    position: relative;
-    transition: all 0.3s ease-in-out;
-    transform: translateY(-40px);
-    opacity: 0;
-    cursor: pointer;
-    overflow: hidden;
-}
-.tilesWrap li button:before {
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 120%;
-    background: #b7b7b7;
-    top: 0;
-    opacity: 0;
-    left: -140px;
-    border-radius: 0 20px 20px 0;
-    z-index: -1;
-    transition: all 0.3s ease-in-out;
-
-}
-.tilesWrap li:hover button {
-    transform: translateY(5px);
-    opacity: 1;
-}
-.tilesWrap li button:hover {
-    color: #262a2b;
-}
-.tilesWrap li button:hover:before {
-    left: 0;
-    opacity: 1;
-}
-.tilesWrap li:hover h2 {
-    top: 0px;
-    opacity: 0.6;
-}
-
-.tilesWrap li:before {
-    content: '';
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    z-index: -1;
-    background: #fff;
-    transform: skew(2deg, 2deg);
-}
-.tilesWrap li:after {
-    content: '';
-    position: absolute;
-    width: 40%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: rgba(255, 255, 255, 0.02);
-}
-.tilesWrap li:nth-child(1):before {
-    background: #C9FFBF;
-background: -webkit-linear-gradient(to right, #FFAFBD, #C9FFBF);
-background: linear-gradient(to right, #FFAFBD, #C9FFBF);
-}
-.tilesWrap li:nth-child(2):before {
-    background: #f2709c;
-background: -webkit-linear-gradient(to right, #ff9472, #f2709c);
-background: linear-gradient(to right, #ff9472, #f2709c);
-}
-.tilesWrap li:nth-child(3):before {
-    background: #c21500;
-background: -webkit-linear-gradient(to right, #ffc500, #c21500);
-background: linear-gradient(to right, #ffc500, #c21500);
-}
-.tilesWrap li:nth-child(4):before {
-    background: #FC354C;
-background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
-background: linear-gradient(to right, #0ABFBC, #FC354C);
-}
-
-.product-listing {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .product-item {
-    width: 300px;
-    height: 400px;
-    border: 1px solid black;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .product-image {
-    width: 100%;
-    height: 60%;
-  }
-  .product-details {
-    width: 100%;
-    height: 40%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-  }
-  .product-title {
-    font-size: 20px;
-    font-weight: bold;
-  }
-  .product-description {
-    font-size: 14px;
-  }
-  .product-price {
-    font-size: 16px;
-    font-weight: bold;
-  }
-  .product-stock {
-    font-size: 14px;
-  }
-  .product-category {
-    font-size: 14px;
-  }
-  .save-button {
-    width: 100px;
-    height: 30px;
-    background-color: blue;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-
-
-  .table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  .table th,
-  .table td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  .table th {
     background-color: lightgray;
-  }
+    border-radius: 25px;
+    text-align: center;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+#create-product-link a:hover, #home-product-link a:hover {
+  background-color: #444;
+  color: #fff;
+  cursor: pointer;
+}
+
+button.delete {
+  background-color: red;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
 
 
 
