--- a/css/style.css
+++ b/css/style.css
@@ -1,95 +1,98 @@
-#container {
-    height: 70px;
-    width: 100%;
-    background-color: black;
-    padding-top: 30px;
-    color: orange;
-    font-size: large;
-    
-    
-    }
-    
-    body{
-        margin: 0 auto;
-    }
-    
-    label {
-    
-    margin-left: 500px;
-    }
-    
-    a {
-        color: orange;
-        text-decoration-line: none;
-        margin-right: 100px;
-        font-size: large;
-        margin-left: 15px;
-    }
-    
-    .ban {
-        height: 650px;
-        width: 100%;
-    }
-    
-    .banner-text {
-        position: absolute;
-       color: burlywood;
-       top: 300px;
-       left: 300px;
-        font-style:unset;
-        text-transform: uppercase;
-        font-weight: 700;
-    
-    
-    }
-    
-    
-    #boxes
-    {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        row-gap: 60px;
-    
-    }
-    
-    
-    .box1,.box2, .box3, .box4, .box5, .box6 {
-        width: 200px;
-        height: 200px;
-        border: 1px solid black;
-        
-        
-    }
-    
-    .box1, .box4 {
-        margin-left: 60px;
-    }
-    .box3, .box6 {
-        margin-left: 100px;
-    }
-    .box2, .box5 {
-        margin-left: 100px;
-    }
-    
-    button {
-        margin-left: 60px;
-       background-color: orange;
-        
-    }
-    
-    .Search {
-        background-color: white;
-        margin-left: 1px;
-    }
-    
-    footer {
-    height: 200px;
-    width: 100%;
-    background-color: black;
-    color: orange;
-    font-size: x-large;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 700;
-    }
+body {
+    background:#f2f2f2;
+}
+
+.admin-link {
+  text-align: right;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 30px;
+}
+
+.admin-link a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: blue;
+  padding: 10px 15px;
+  border-radius: 50px;
+  display: inline-block;
+  transition: all 0.2s;
+}
+
+.admin-link a:hover,
+.admin-link a:active {
+  background-color: lightblue;
+  transform: translateY(-2px);
+}
+
+
+.admin-link span {
+  color: blue;
+  font-size: 14px;
+  font-style: italic;
+  margin-left: 10px;
+}
+
+ul#product1 {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+li.theproduct {
+  width: 25%;
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+  background-color: white;
+}
+
+li.theproduct:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+
+h2.price {
+  font-size: 18px;
+  color: green;
+  margin-top: 20px;
+}
+
+
+h3.name {
+  font-size: 22px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+
+select#category {
+  width: 100%;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 5px;
+  border: none;
+  background-color: #e6e6e6;
+  margin-top: 20px;
+}
+
+
+input#cato-2 {
+  width: 100%;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 5px;
+  border: none;
+  background-color: #e6e6e6;
+  margin-top: 20px;
+}
     
